--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -1,3 +1,4 @@
 $grey: #c2c2c2;
 $white: #fff;
 $myriad-pro: MyriadPro-Regular, 'Myriad Pro Regular', MyriadPro, 'Myriad Pro', Helvetica, Arial, sans-serif;
+$sans: 'Open Sans', Helvetica, Arial, sans-serif;
